Repair initial modem simulator spec
Resolve the consolidated review findings across the Initial-Spec package by making the XSD the authoritative runtime profile contract, defining deterministic session ownership and scheduling, and replacing loose acceptance prose with executable byte/event-level criteria.

Also fixes protocol and scope contradictions around SIM/network state, CREG/CSQ, SMS prompts, ATH, control lines, redaction, XML hardening, target profiles, JavaFX/toolchain choices, replay, and redistributable reference boundaries so the v1 spec is buildable to acceptance.